Configuracao do coletor, pbx, e ajustes iniciais coleta telnet ok

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nIE0wSUb+co2AU1sTrkmI6O4XLkmeDj4M+IjhCxIb2s=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=desenvolvimento
+DB_USERNAME=benetelecom
+DB_PASSWORD=b1ll1ng
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
